# Temperature_WSN

./: .gitignore  README.md
blink/: sdkconfig  sdkconfig.old
blink/main/: CMakeLists.txt  ds18b20.c
client_model/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig copy  sdkconfig.old
client_model/include/: custom_sensor_model_defs.h  mesh_client.h
client_model/main/: CMakeLists.txt  main.c
client_model/src/: mesh_client.c
ds18b20_test/: CMakeLists.txt  sdkconfig
ds18b20_test/main/: CMakeLists.txt  LCD1602.h  ds18b20.c  ds18b20_test.c
hello_world/main/: hello_world_main.c
server_model/: CMakeLists.txt  sdkconfig  sdkconfig.old
server_model/include/: LCD1602.h  custom_sensor_model_defs.h  ds18b20.h  mesh_server.h
server_model/main/: CMakeLists.txt  board.c  board.h  main.c
server_model/src/: LCD1602.c  ds18b20.c  mesh_server.c
tcp/: CMakeLists.txt  sdkconfig  sdkconfig copy.old  sdkconfig.old
tcp/include/: mesh_client.h
tcp/main/: CMakeLists.txt  main.c
tcp/src/: mesh_client.c
